assets/scss/themes/default/theme.scss
// SDK Component Styling
@import 'src/libs/ccPrice/cc-price.scss';
@import 'src/libs/ccThumbnailBar/cc-thumbnail-bar.scss';
@import 'src/libs/ccZippy/cc-zippy.scss';

@import 'src/cc-button.scss';
@import 'src/cart/cc-cart.scss';
@import 'src/categories/cc-category-list.scss';
@import 'src/categories/cc-category-grid.scss';
@import 'src/products/cc-product-grid.scss';
@import 'src/product/cc-product.scss';
@import 'src/product/cc-product-wide.scss';
@import 'src/product/cc-product-buy-box.scss';
@import 'src/cc-highlight.scss';
@import 'src/common/header/cc-header.scss';
@import 'src/common/footer/cc-footer.scss';
@import 'src/libs/ccFooterLinks/cc-footer-links.scss';
@import 'src/common/contextviews/cc-context-views.scss';
@import 'src/search/cc-search-result.scss';
@import 'src/checkout/cc-checkout.scss';
@import 'src/summary/cc-summary.scss';

body{
    font-family: $cc-font-default;
    background: $cc-background-color;
    line-height: 1.2em;
}

a {
    color:$color-2;
}

.snap-content {
    background: $cc-background-color;
    box-shadow: rgba(0, 0, 0, 0.33) 0 0 24px 0;
}

.snap-drawer {
    width:266px;
}

.cc-modal{
    color: $cc-background-text-color;
}

.cc-modal--solid{
    background: $cc-background-color;
}

.cc-title--huge {
    margin:0;
    line-height: 1.25;
}

.cc-side-menu {
    .cc-category-tree-view__category-entry--active {
        background: $color-2;
    }
}

.cc-text-box {
    &:focus {
        box-shadow: none;
        border-color: lighten($color-1, 33%);
    }
}

.cc-form-label--required {
    font-weight: 400;
    color: $color-1;
}
.cc-form-label--optional {
    color: tint($color-1, 50%);
}

.cc-validation__message--fail {
    width:100%;
    margin:3px 0 0 0;
    background: #DFC05E;
    border-radius: $cc-primary-border-radius;

    &:before {
        border-bottom-color: #DFC05E;
    }
}
.cc-validation__message--success {
    @extend .fa;
    @extend .fa-check-square;

    right:10px;
    color:#78C228;
}

.cc-tooltip--info {
    background: #DFC05E;

    &:before {
        border-bottom-color:#DFC05E;
    }
}

input[type="checkbox"]:focus + .topcoat-checkbox__checkmark:before {
    -webkit-box-shadow: inset 0 2px $cc-check-box__border-color;
    box-shadow: inset 0 2px $cc-check-box__border-color;
    border:1px solid lighten($color-1, 33%);
}

// This is a modal class to overwrite some default bootstrap properties
// and is separate from the couch modal which is used in the search, among others.
.cc-bootstrap-modal {
    background: $cc-background-color;
}

.cc-go-up-button,
.cc-go-back-button {
    background: none;
    border: none;
    padding: 0;
    color: inherit;
    font-size: inherit;
}

.cc-go-up-control__icon,
.cc-go-back-button__icon {
    @extend .fa;
    @extend .fa-angle-left;

    margin-right:6px;
}

@include breakpoint(wide) {
    .cc-go-up-control__icon {
        @extend %fa-fw-class--wide;

        margin:0;
    }
}

.cc-view-wrapper {
    color: hsla($color-1-h, $color-1-s, $color-1-l, 0.8);
}

.cc-info-box{
    background: $cc-info-area-background-color;
    color: $cc-info-area-text-color;
    border: 1px solid $cc-info-area-text-color;
}

.cc-warning-box {
    background: $cc-warning-background-color;
    color: $cc-warning-text-color;
    border: 1px solid $cc-warning-text-color;
}

.cc-tooltip--info {
    @extend .cc-tooltip;

    color:#fff;
    margin:3px 0 0 0;
    border-radius: $cc-primary-border-radius;
}

//not sure yet where would be the best location for this kind of component bootstrapping
@include cc-select-box($cc-select-box__name: 'cc-select-box',
                       $cc-select-box__modifier: '',
                       $cc-select-box__background: $color-6,
                       $cc-select-box__color: $color-1,
                       $cc-select-box__font-size: 1rem,
                       $cc-select-box__height: 44px,
                       $cc-select-box__border-radius: $cc-primary-border-radius,
                       $cc-select-box__border-color: darken($color-6, 20%),
                       $cc-select-box__border-bottom-width: $cc-border-bottom-width);

.cc-select-box {
    .cc-select-box__select-icon {
        @extend .fa;
        @extend .fa-angle-down;
        @extend .fa-fw;

        line-height: 42px;
        height: 42px;
        padding: 0;
        width: 42px;
        right: 1px;
        margin-top: -21px;
        background: #F2F2F2;
        border-radius: 0 2px 2px 0;
        text-align: center;
        color: #999;
    }

    & + .cc-select-box {
        margin-top: 6px;
    }
}
/*  ===========================================================================
    MEDIA-QUERY-SAVE @extend
    note: each mixin has to include the respective media query in which it will
    be applied. This way we can use @extend within media queries and still be
    save with future releases of SASS.
    =========================================================================*/

// save @extend for up-nav container
@mixin up-nav--generic {
    background: $color-1;
    color: lighten($color-1, 50%);
}
%up-nav--generic {
    @include up-nav--generic;
}
@mixin up-nav--narrow {
    @include breakpoint(narrow) {
        line-height: 24px;
        padding:6px 10px;
    }
}
%up-nav--narrow {
    @include up-nav--narrow;
}
@mixin up-nav--wide {
    @include breakpoint(wide) {
        line-height:36px;
        padding:6px 10px 6px 4px;
    }
}
%up-nav--wide {
    @include up-nav--wide;
}

// save @extend for main headers
@mixin main-headline--generic {
    line-height: 36px;
    padding: 6px 10px;
    background: $color-1;
    color: $color-6;
}
%main-headline--generic {
    @include main-headline--generic;
}
@mixin main-headline--narrow {
    @include breakpoint(narrow) {
    }
}
%main-headline--narrow {
    @include main-headline--narrow;
}
@mixin main-headline--wide {
    @include breakpoint(wide) {
    }
}
%main-headline--wide {
    @include main-headline--wide;
}

// save @extend for go-up-controls

// Shared within a media query
@mixin go-up-control--wide__content-helper {
    @include breakpoint(wide) {
        position: relative;
        display: inline-block;
        line-height: 44px;
    }
}
%go-up-control--wide__content-helper {
    @include go-up-control--wide__content-helper;
}
@mixin go-up-control--wide {
    @include breakpoint(wide) {
        margin:0;
        color: darken($color-6, 20%);
        font-size: 1rem;
    }
}
%go-up-control--wide {
    @include go-up-control--wide;
}
    @mixin go-up-control__icon--wide {
        @include breakpoint(wide) {
            @extend %go-up-control--wide__content-helper;

            width: 44px;
            margin:0;
            font-size: 1.5rem;
            vertical-align: top;
            background: lighten($color-1, 10%);
            box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.25);
            border-radius: 3px 0 0 3px;
        }
    }
    %go-up-control__icon--wide {
        @include go-up-control__icon--wide;
    }
    @mixin go-up-control__text--wide {
        @include breakpoint(wide) {
            @extend %go-up-control--wide__content-helper;

            background: lighten($color-1, 10%);
            padding: 0 20px 0 10px;
            text-align: left;
            margin-left: -4px;
            box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.25);
            border-radius: 0 3px 3px 0;
        }
    }
    %go-up-control__text--wide {
        @include go-up-control__text--wide;
    }

// Some rather hacky way to make the footer sticky
// TODO: rethink the scaffolding of the app to make sticky footers work more reliable and with less hackiness
@include breakpoint(wide) {
    .cc-push-footer {
        height: auto;
        min-height: 100%;
        margin-top:-$cc-header-base__height;
        padding-top:$cc-header-base__height;
        margin-bottom:-($cc-footer-base__height--wide + 10px); // uuh... that's for the footer's margin

        &:after {
            content: "";
            display: block;
            height:$cc-footer-base__height--wide + 1px;
        }
    }
}

